<resources>
    <string name="app_name">Rentee</string>
    <string name="sign_in">Sign In</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">My Items</string>
    <string name="title_notifications">Notifications</string>

    /////////////////////////////////////// Home page ////////////////////////////////////////////
    // Address fragment
    <string name="title_welcome">So nice to see you, let\'s start the party!</string>
    <string name="btn_start_rent">Start</string>
    <string name="address_hint">Insert your address</string>
    <string name="current_location">Current location</string>

    // Date fragment
    <string name="selected_address">Selected address:</string>
    <string name="choose_rental_date">Choose rental dates</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="continue_to_select_items">Select items</string>


    /////////////////////////////////////// Uploaded Item ////////////////////////////////////////////
    // Uploaded items list fragment
    <string name="picture_of_uploaded_item">picture of uploaded item</string>
    <string name="upload_new_item">upload new item</string>
    <string name="upload_new_item_title">Upload New Item</string>
    <string name="select_photo">Select photo</string>
    <string name="item_description">Description</string>
    <string name="upload_item">upload item</string>

</resources>