<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.rentee.ui.home.NewRentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.NewRentalAddressFragment">

        <View
            android:id="@+id/background_view"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/dark_gray_fade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_baseline_arrow_back_32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_baseline_close_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RelativeLayout
            android:id="@+id/rl_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/background_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/light_gray"
                android:text="@string/selected_address"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_address_title"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/light_gray"
                android:enabled="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@{viewmodel.newRental.address}" />
        </RelativeLayout>

        <View
            android:id="@+id/separation_view"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/background_view" />

        <View
            android:id="@+id/self_location_view"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separation_view" />

        <TextView
            android:id="@+id/tv_self_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_rental_date"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/self_location_view"
            app:layout_constraintEnd_toEndOf="@id/self_location_view"
            app:layout_constraintStart_toStartOf="@+id/self_location_view"
            app:layout_constraintTop_toTopOf="@+id/self_location_view" />

        <TextView
            android:id="@+id/pick_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/pick_date"
            android:layout_marginBottom="5dp"
            app:layout_constraintEnd_toEndOf="@+id/pick_date"
            app:layout_constraintStart_toStartOf="@+id/pick_date"/>

        <include
            android:id="@+id/pick_date"
            layout="@layout/date_time_field"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/self_location_view"
            app:layout_constraintEnd_toStartOf="@+id/back_date"/>


        <TextView
            android:id="@+id/back_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/back_date"
            android:layout_marginBottom="5dp"
            app:layout_constraintEnd_toEndOf="@+id/back_date"
            app:layout_constraintStart_toStartOf="@+id/back_date"/>

        <include
            android:id="@+id/back_date"
            layout="@layout/date_time_field"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/pick_date"
            app:layout_constraintStart_toEndOf="@id/pick_date"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintBottom_toBottomOf="@+id/pick_date"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <Button
            android:id="@+id/btn_approve_dates"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginBottom="90dp"
            android:text="@string/continue_to_select_items"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="normal"
            app:backgroundTint="@color/light_gray"
            app:iconTint="@color/black"
            app:rippleColor="@android:color/transparent"
            app:isButtonGone="@{viewmodel.isSelectItemsGone}"
            app:strokeColor="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
